--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 39.9375em) {
-  background-color: #d000ff;
+  background-color: #e281f8;
   width: 100%;
 }
 
@@ -24,7 +24,7 @@ body {
 
 @media screen and (min-width: 39.9375em) {
   .header {
-    background-color: #d000ff;
+    background-color: #e281f8;
     width: 100%;
   }
 }
@@ -42,7 +42,7 @@ body {
 
 .header header {
   grid-area: header;
-  background-color: #d000ff;
+  background-color: #e281f8;
   border: 1px solid black;
   margin: 0px auto 0px 0px;
 }
@@ -53,13 +53,13 @@ body {
 
 .header aside {
   grid-area: aside;
-  background-color: #d000ff;
+  background-color: #e281f8;
   border: 1px solid black;
   margin: auto auto auto 0px;
 }
 
 .console {
-  background-color: #d8c2fd;
+  background-color: #e281f8;
   margin: 25px 0px 25px 0px;
   padding: 5px;
 }
@@ -77,16 +77,17 @@ body {
   }
 }
 
-.console h2, .console p {
+.console h2,
+.console p {
   margin: 0px;
 }
 
 .console .console-name {
-  color: #ce0078;
+  color: #47002a;
 }
 
 .console .console-desc {
-  color: #a14815;
+  color: #331300;
 }
 
 .pollbox-1 {
@@ -102,7 +103,7 @@ body {
 
 @media screen and (min-width: 39.9375em) {
   .pollbox-1 {
-    background-color: #d000ff;
+    background-color: #e281f8;
     width: 600px;
   }
 }
@@ -116,7 +117,7 @@ body {
 
 .pollbox-1 header {
   grid-area: header;
-  background-color: #d000ff;
+  background-color: #e281f8;
   border: 1px solid black;
   margin: auto;
 }
@@ -136,7 +137,7 @@ body {
 
 .pollbox-1 aside {
   grid-area: aside;
-  background-color: #d000ff;
+  background-color: #e281f8;
   border: 1px solid black;
   margin: auto;
 }
