--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -16,7 +16,7 @@ body {
   background-color: #f38d65;
   padding: 5px;
   display: grid;
-  grid-gap: .20em;
+  grid-gap: 0.2em;
   grid-template-rows: 1fr;
   grid-template-columns: 3fr 1fr;
   grid-template-areas: "header main aside";
@@ -36,8 +36,13 @@ body {
   }
 }
 
-.header h2, .header h5 {
+.header h2,
+.header h5 {
   margin: 0px 0px 0px 0px;
+}
+
+.header li {
+  color: darkslategray;
 }
 
 .header header {
