--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import "4-layout/_floatingShapes.scss";
 @import "4-layout/_footer.scss";
 @import "4-layout/_navigation.scss";
+@import "4-layout/_layoutOne.scss";
 @import "4-layout/_siteHeader.scss";
 @import "4-layout/_siteMainContent.scss";
 
