--- a/pollingo/src/scss/4-layout/_layoutOne.scss
+++ b/pollingo/src/scss/4-layout/_layoutOne.scss
@@ -5,8 +5,6 @@
 @include screenSizeBp(min-small) {
   // view size small 2/6
   // -------------------
-  background-color: getColor(pb-header-bg-1);
-  width: 600px;
 }
 
 @include screenSizeBp(min-medium) {
@@ -18,14 +16,34 @@
 @include screenSizeBp(min-large) {
   // VIEW large 4/6
   // -------------------
-  // not needed
+
+  .grid-main-item-header {
+    grid-area: header;
+    background-color: deepskyblue;
+  }
+
+  .grid-main-item-main {
+    grid-area: main;
+  }
+
+  .grid-main-item-footer {
+    grid-area: footer;
+  }
+
+  .grid-main-container {
+    display: grid;
+    grid-template-columns: [col1] 50px [col2] auto [col3] 50px;
+    grid-template-rows: [row1] 100px [row2] 100px [row3] auto;
+    grid-template-areas:
+      "header main main"
+      "header main main"
+      "footer footer footer";
+  }
 }
 
 @include screenSizeBp(min-extralarge) {
   // VIEW xl 5/6
   // ----------------
-  background-color: getColor(pb-main-bg-xl-1);
-  width: 600px;
 }
 
 @include screenSizeBp(min-extraextralarge) {
@@ -38,6 +56,7 @@
 //---------------
 .grid-main-item-header {
   grid-area: header;
+  background-color: deeppink;
 }
 
 .grid-main-item-main {
