--- a/pollingo/src/scss/1-helpers/_util_variables.scss
+++ b/pollingo/src/scss/1-helpers/_util_variables.scss
@@ -1,5 +1,5 @@
 $colors: (
-  primary-1: rgb(253, 249, 7),
+  primary-1: rgb(134, 133, 78),
   primary-2: rgb(0, 0, 0),
   secondary-1: rgb(106, 250, 10),
   secondary-2: rgb(0, 0, 0),
@@ -7,7 +7,7 @@ $colors: (
   accent-2: rgb(0, 0, 0),
   background-1: rgb(5, 42, 255),
   background-2: rgb(0, 0, 0),
-  pb-header-bg-1: rgb(226, 129, 248),
+  pb-header-bg-1: rgb(243, 189, 255),
   pb-main-bg-1: rgb(255, 0, 76),
   pb-aside-bg-1: rgb(251, 253, 255),
   pb-nav-bg-1: rgb(255, 255, 255),
@@ -16,6 +16,8 @@ $colors: (
   con-desc-1: rgb(51, 19, 0),
   con-bg-1: rgb(226, 129, 248),
   con-name-1: rgb(71, 0, 42),
+  header-bg-1: rgb(255, 44, 167),
+  header-text-1: rgb(71, 0, 42),
 );
 
 $sizes: (
