nothing much. too tired.

--- a/pollingo/src/scss/1-helpers/_util_variables.scss
+++ b/pollingo/src/scss/1-helpers/_util_variables.scss
@@ -18,6 +18,10 @@ $colors: (
   con-name-1: rgb(71, 0, 42),
   header-bg-1: rgb(255, 44, 167),
   header-text-1: rgb(71, 0, 42),
+  pb-main-tab-bg-1: rgb(48, 2, 28),
+  pb-main-tab-bg-2: rgb(92, 2, 54),
+  pb-main-tab-text-1: rgb(221, 197, 211),
+  pb-main-tab-text-2: rgb(255, 255, 255),
 );
 
 $sizes: (
