--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -199,11 +199,13 @@ body {
   padding: 0px;
   font-family: sans-serif;
   font-size: 18px;
-  background-color: #e47878;
+  background-color: #30021c;
+  color: #ddc5d3;
 }
 
 .pollbox-1 .tabContainer .buttonContainer button:hover {
-  background-color: #ff3a3a;
+  background-color: #5c0236;
+  color: white;
 }
 
 .pollbox-1 .tabContainer .tabPanel {
