got tabs working but hover breaks ssoooo...

--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -17,11 +17,9 @@
   background-color: getColor(header-bg-1);
   color: getColor(header-text-1);
 
-  /*
   li {
-    color: darkslategray;
+    color: rgb(5, 92, 92);
   }
-
 
   padding: 5px;
 
@@ -51,5 +49,4 @@
     border: getSize(pb-border-1);
     margin: auto auto auto 0px;
   }
-*/
 }
