--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -180,11 +180,11 @@ body {
 
 .pollbox-1 .tabContainer .tabPanel {
   height: 85%;
-  text-align: center;
-  padding-top: 105px;
+  padding-top: 5px;
   box-sizing: border-box;
   font-family: sans-serif;
   font-size: 22px;
   display: none;
+  background-color: blue;
 }
 /*# sourceMappingURL=main.css.map */
