adding some mix() funictions to the css. responsive!

--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -20,6 +20,10 @@ body {
     - min-extralarge
     - min-extraextralarge
 */
+.layoutOne {
+  width: min(90%, 300px);
+}
+
 .header-container {
   background-color: #ff2ca7;
   color: #47002a;
