--- a/pollingo/src/scss/4-layout/_layoutOne.scss
+++ b/pollingo/src/scss/4-layout/_layoutOne.scss
@@ -12,6 +12,8 @@
 */
 
 .layoutOne {
+  width: unquote("min(90%, 300px)");
+
   //   @include screenSizeBp(min-small) {
   //     // view size small 2/6
   //     // -------------------
