--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -32,7 +32,7 @@
     grid-area: header;
     background-color: getColor(pb-header-bg-1);
     border: getSize(pb-border-1);
-    margin: 0px auto 0px 0px;
+    margin: 0px 0px 0px 0px;
   }
 
   main {
