--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -21,7 +21,8 @@ body {
     - min-extraextralarge
 */
 .layoutOne {
-  width: min(90%, 300px);
+  align: center;
+  width: max(90%, 320px);
 }
 
 .header-container {
@@ -48,7 +49,7 @@ body {
   grid-area: header;
   background-color: #f3bdff;
   border: 1px solid black;
-  margin: 0px auto 0px 0px;
+  margin: 0px 0px 0px 0px;
 }
 
 .header-container main {
