--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -197,4 +197,9 @@ body {
   display: none;
   background-color: blue;
 }
+
+.seperator-1-div {
+  text-align: center;
+  color: #6b2a2a;
+}
 /*# sourceMappingURL=main.css.map */
