--- a/pollingo/src/scss/main.scss
+++ b/pollingo/src/scss/main.scss
@@ -26,5 +26,6 @@
 @import "5-modules/_Console.scss";
 @import "5-modules/_PollBox.scss";
 @import "5-modules/_ToggleRankedVoting.scss";
+@import "5-modules/seperatorComponent.scss";
 
 // 6-PAGES
