--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -25,7 +25,7 @@
   display: grid;
   grid-gap: 0.2em;
   grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 0fr 2fr;
   grid-template-areas: "header main aside";
 
   header {
@@ -38,7 +38,6 @@
   main {
     grid-area: main;
     background-color: getColor(pb-header-bg-1);
-    border: getSize(pb-border-1);
     margin: auto auto auto 0px;
   }
 
@@ -46,6 +45,6 @@
     grid-area: aside;
     background-color: getColor(pb-header-bg-1);
     border: getSize(pb-border-1);
-    margin: auto auto auto auto;
+    margin: 0px 0px 0px 0px;
   }
 }
