added new boarder component. will be used to seperate polls

--- a/pollingo/src/scss/4-layout/_siteHeader.scss
+++ b/pollingo/src/scss/4-layout/_siteHeader.scss
@@ -46,5 +46,10 @@
     background-color: getColor(pb-header-bg-1);
     border: getSize(pb-border-1);
     margin: 0px 0px 0px 0px;
+
+    ul li {
+      margin: 3px;
+      display: inline;
+    }
   }
 }
