--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -64,6 +64,11 @@ body {
   margin: 0px 0px 0px 0px;
 }
 
+.header-container aside ul li {
+  margin: 3px;
+  display: inline;
+}
+
 .console {
   background-color: #e281f8;
   margin: 100px 0px 25px 0px;
